# bp3m

./: CLAUDE.md  README.md  benchmark_psf.py  bp3m_run.py  pyproject.toml
bp3m/: solver.py
bp3m/notebooks/: 01_field_overview.ipynb  03_astrometric_quality.ipynb  04_cross_match_diagnostics.ipynb
bp3m/pipeline/: cross_match.py  download_gaia.py  download_jwst.py  hst_catalog_crossmatch.py  plot_results.py  psf_fitting.py  run_alignment.py  run_iterate_v2.py
notebooks/: 02_proper_motions.ipynb  05_v2_results.ipynb
pypass/: _jax_kernel.py  core.py  multipass.py
