[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bp3m"
version = "2.0.0"
description = "Bayesian Pipeline for Proper Motion measurements using HST and Gaia"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kevin McKinnon", email = "kevinmckinnon95@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "astroquery",
    "matplotlib",
    "tqdm",
    "pandas",
    "joblib",
    "jax",
    "jaxlib",
    "nbconvert",
    "ipykernel",
    "pypass",
    "gaia_cross_match",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KevinMcK95/bp3m"
Repository = "https://github.com/KevinMcK95/bp3m"
Paper = "https://doi.org/10.3847/1538-4357/ad5ff6"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
bp3m = "bp3m_run:main"
bp3m-v2 = "bp3m.pipeline.run_iterate_v2:main"
bp3m-notebooks = "bp3m.notebooks_cmd:main"
bp3m-setup = "bp3m.setup:main"

[tool.setuptools]
py-modules = ["bp3m_run"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"bp3m.notebooks" = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
